<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_rqt_plugin</name>
  <version>1.0.1</version>
  <description>RQT plugin to visualize a Deep State Representation (DSR) graph.</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <license>Apache-2.0</license>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>eigen</depend>
  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>pluginlib</depend>
  <depend>qt_gui_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>